public/styles/styles.css
/* css reset */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

*:focus {
    outline: none;
}

/* ! ****************************** */
/* ! CUSTOM PROPERTIES ************ */
/* ! ****************************** */
:root {
    /* colors */
    --btn-color: #6ecc84;
    --green-bg-color: #e0ffe8;
    --footer-color: #264e32;

    /* layout */
    --navbar-height: 100px;
    --footer-height: 65px;
    --navbar-width: 270px;
}

/* ! ****************************** */
/* ! GENERALS ********************* */
/* ! ****************************** */
html {
    -webkit-tap-highlight-color: transparent;
    /* scroll-behavior: smooth; */
}

body {
    font-family: 'roboto', sans-serif;
}

body.wait,
body.wait *,
body.wait *:hover {
    cursor: wait !important;
}

.container {
    max-width: 550px;
    margin: 0 auto;
    height: 100%;
}

a {
    color: black;
}

h1 {
    font-family: serif;
    color: var(--footer-color);
    font-size: min(calc(2rem + 1.5vw), 56px);
    margin-bottom: 20px;
}

header.hero-secondary h1 {
    font-family: sans-serif;
    font-weight: 400;
    color: white;
    text-transform: uppercase;
    position: relative;
}

h1>span {
    display: block;
    font-size: min(calc(1.5rem + 1.5vw), 40px);
}

h2 {
    font-family: serif;
    font-size: 2rem;
    margin-bottom: 20px;
    letter-spacing: .8px;
}

h3 {
    color: var(--btn-color);
    font-size: 1.1rem;
    margin-bottom: 10px;
    font-weight: 500;
    text-transform: uppercase;
}

h4 {
    color: var(--btn-color);

    font-size: 1.8rem;
    font-family: serif;
    font-weight: 500;
    padding: 0 30px;

    margin-bottom: 20px;
}

p {
    line-height: 1.5;
}


hr {
    width: 80px;
    border: none;
    background-color: var(--footer-color);
    height: 5px;
}

address {
    font-style: normal;
}

.btn {
    display: inline-block;
    padding: 17px 32px;
    background-color: var(--btn-color);
    position: relative;

    overflow: hidden;

    font-size: 13px;
    font-weight: bold;
    color: white;

    letter-spacing: 1px;
    text-transform: uppercase;

    transition: background-color 300ms;
}

/* ! ****************************** */
/* ! NAVBAR *********************** */
/* ! ****************************** */
#top-header {
    height: var(--navbar-height);
    background-color: #fff;

    position: sticky;
    top: 0;
    left: 0;
    z-index: 1;

    box-shadow: 0 0 2px black;
}

#top-header .container {
    height: 100%;
}

#hdr-logo img {
    max-width: 75%;
    max-height: var(--navbar-height);
}

/* # NAVBAR */
#top-navbar {
    position: absolute;
    top: calc(var(--navbar-height) + 1px);
    left: calc(var(--navbar-width) * -1);

    width: var(--navbar-width);
    height: calc(100vh - var(--navbar-height));
    background-color: white;
    box-shadow: 0 0 2px gray;

    padding: 50px 20px;

    transition: left 300ms;
}

.open~#top-navbar {
    left: 0;
}

#top-navbar li a {
    display: block;
    font-weight: bold;
    padding: 20px 0;

    border-bottom: 1px solid lightgray;
    color: black;

    transition: color 300ms;
}

#top-navbar li a.active {
    color: var(--btn-color);
}

#top-navbar li a:hover {
    color: var(--btn-color);
}

/* ! ****************************** */
/* ! MAIN ************************* */
/* ! ****************************** */
section,
main header {
    padding: 100px 20px;
    background-repeat: no-repeat;
    background-position: top;
    background-size: cover;
}

/* # HERO */
#hero {
    background-image: url(../img/Hero-background-1024x533.webp);
    background-color: #bfdac6;
    background-repeat: no-repeat;
    background-position: top;
    background-size: cover;

    padding: 0;

}

#hero .col-50:first-of-type {
    padding: 75px;
}

#hero img {
    height: 550px;
    max-width: 100%;
    object-fit: cover;
    background-color: #b7b8b2;
}

#hero h3 {
    font-family: 1.18rem;
    font-weight: 600;
}

/* # SECOND HERO */

.hero-secondary {
    background-image: url(../img/Immagini\ sito.webp);
    background-color: #bfdac6;
    height: 25vh;
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;
}

.hero-secondary::before {
    content: '';
    position: absolute;
    inset: 0;
    background-image: linear-gradient(180deg, #ffffff00 0%,
            #76be82 100%);
    opacity: .5;
}

/* # CHI SONO */

/* # COSA ASPETTARSI */
#cosa-aspettarsi {
    background-image: url(../img/cosa-aspettarsi-bg.webp);
}

#cosa-aspettarsi figure {
    padding: 0 20% 0 30%;
}

/* # DI COSA MI OCCUPO */
#di-cosa-mi-occupo {
    background-image: url(../img/h4_pattern.webp);
    position: relative;
    background-size: fill;
}

#di-cosa-mi-occupo:before {
    content: '';
    position: absolute;
    inset: 0;
    background-color: var(--green-bg-color);
    opacity: .85;
}

#di-cosa-mi-occupo>* {
    position: relative;
}

#di-cosa-mi-occupo h2 {
    color: var(--footer-color);
    margin-bottom: 75px;
}

#di-cosa-mi-occupo .col {
    flex-basis: 100%;
    background-color: white;
}

#di-cosa-mi-occupo .col-text {
    padding: 2rem 1rem;
}

#di-cosa-mi-occupo p {
    color: rgb(119, 119, 119);

    font-size: 15px;
    line-height: 24px;
}

#di-cosa-mi-occupo .btn {
    margin: 0 auto;
}

#di-cosa-mi-occupo h4 {
    min-height: 66px;
    display: flex;
    align-items: center;
}

#di-cosa-mi-occupo p {
    font-size: .95rem;
}

/* # DR FEDERICO DELLASANTA */
#dr-federico-dellasanta img {
    max-height: 425px;
}

/* # IL MIO LAVORO */
#il-mio-lavoro {
    background-color: var(--green-bg-color);
}

/* # CBT */
#cbt {
    background-color: var(--green-bg-color);
}

/* # CONTATTAMI */
#contattami li {
    margin-bottom: 20px;
    line-height: 1.5rem;
}

#contattami .fa-li {
    color: var(--btn-color);
    font-size: 1.5rem;
}

/* * contattami form */
#contattami .col-50.flex-column {
    min-height: 150px;
}

.contact-info {
    display: block;
    border: 1px solid lightgray;
    outline: 0;

    outline: none;
    width: 100%;
    resize: none;
    background-color: white;
    z-index: 0;

    padding: 1rem;
    font-family: sans-serif;
}

.contact-info:focus {
    border-color: var(--btn-color);
    box-shadow: 0 2px 9px 2px rgba(0, 0, 0, .15);
}

#contact-form input {
    height: 18px;
}

#contact-form textarea {
    height: 150px;
}

#contact-form .btn {
    display: inline-block;
    width: 100%;
    height: 50px;
    border: none;
    cursor: pointer;
    transition: opacity 300ms;
}

#contact-form .btn.unclickable {
    cursor: not-allowed;
    opacity: .5;
}

.iubenda-link {
    display: inline-block;
    color: gray;
    transition: color 300ms
}

.iubenda-link:hover,
.iubenda-link:focus {
    color: orange;
}

#miele-cb {
    visibility: hidden;
    display: none;
}

#contattami sup {
    color: red;
}

input[type="checkbox"] {
    appearance: none;
    vertical-align: middle;
}

input[type="checkbox"]::before {
    content: '\f0c8';
    font: var(--fa-font-regular);
    font-size: 1rem;
    color: lightgray;
}

input[type="checkbox"]:checked::before {
    content: '\f14a';
    font: var(--fa-font-solid);
    color: var(--btn-color);
    font-size: 1rem;
}

input[type="checkbox"]:focus::before,
input[type="checkbox"]:hover::before {
    color: var(--btn-color);
    text-shadow: 0 2px 9px 2px rgba(0, 0, 0, .15);
}

label[for="norm-cb"] {
    user-select: none;
}

/* # RISPOSTA */
.response {
    padding: 20px;
    border-width: 1px;
    border-style: solid;
    border-radius: 15px;
    font-weight: bold;

    position: relative;

    transition: opacity 500ms;
}

.response::before {
    font: var(--fa-font-solid);
    padding-right: 1rem;
}

.response .fa-xmark {
    cursor: pointer;

    position: absolute;
    top: 50%;
    right: 20px;
    transform: translateY(-50%);
}

.response.success {
    color: #0a3622;
    border-color: #a9d2bf;
    background-color: #d1e7dd;
}

.response.success::before {
    content: '\f058';
}

.response.bad {
    color: #664d03;
    border-color: #ffecb2;
    background-color: #fff3cd;
}

.response.bad::before {
    content: '\f06a';
}

/* # CONTATTI */
#contatti {
    background-color: var(--green-bg-color);
    padding-top: 75px;
    padding-bottom: 75px;
    position: relative;
}

#contatti::before {
    position: absolute;
    content: '';
    inset: 0;

    background-image: url(../img/footer_right.webp);
    background-size: fill;
    background-position: bottom right;
    background-repeat: no-repeat;
}

#contatti img {
    width: 75%;
}

#contatti .map {
    max-width: 100%;
}

#contatti>.col-50:first-child {
    align-self: flex-start;
}

#contatti h4 {
    display: inline-block;
    color: var(--footer-color);
    border-bottom: 2px solid var(--btn-color);
    padding-bottom: 1rem;
    margin-bottom: 2rem;
    padding-left: 0;
}

#contatti i {
    color: var(--btn-color);
}

#contatti li {
    margin-bottom: 1rem;
}

#contatti .underline-on-hover a {
    padding-bottom: 2px;
    border-bottom: 1px solid transparent;
    transition: 300ms;
}

#contatti .underline-on-hover a:hover,
#contatti .underline-on-hover a:focus {
    border-color: black;
}

iframe.map {
    background-color: #e5e3df;
}

/* ! ****************************** */
/* ! FOOTER *********************** */
/* ! ****************************** */
.ftr-bottom {
    height: var(--footer-height);
    background-color: var(--footer-color);
    color: white;

    padding: 20px;
}

/* ! ****************************** */
/* ! RESPONSIVE ******************* */
/* ! ****************************** */
/* # tablet */
@media screen and (min-width: 767px) {
    .container {
        max-width: 980px;
    }

    #hero img {
        height: 650px;
    }

    #hero h3 {
        font-size: 1.8rem;
        font-weight: 600;
    }

    #di-cosa-mi-occupo .col {
        flex-basis: calc((100% - 40px) / 2);
    }

    #cbt .col-50:first-child {
        order: 1;
    }

    #cbt figure {
        padding: 0 20% 0 30%;
    }
}

/* # desktop */
@media screen and (min-width: 992px) {
    .container {
        max-width: 1200px;
    }

    #top-header .container,
    .ftr-bottom .container {
        max-width: 1400px;
    }

    #top-header {
        padding: 0;
    }

    /* * navbar switch */
    #hamburger-menu {
        display: none;
    }

    #top-navbar {
        position: static;
        width: auto;
        height: auto;
        box-shadow: none;
        padding: 0;
    }

    #top-navbar ul {
        display: flex;
    }

    #top-navbar li a {
        padding: 20px;
        border: none;
    }

    /*  HERO */
    #hero .col-50:first-of-type {
        padding-left: 100px;
    }

    /* # DI COSA MI OCCUPO */
    #di-cosa-mi-occupo .col {
        flex-basis: calc((100% - 40px) / 3);
    }

    #formButton {
        margin-top: 0;
    }

    #dr-federico-dellasanta .col-50.mb-50 {
        margin-bottom: 0 !important;
    }
}

@media screen and (min-width: 1080px) {
    #hero .col-50:first-of-type {
        padding-left: 250px;
    }
}

